--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -136,6 +136,7 @@ a.sidebar-nav-icon {
   line-height: 1.75;
   margin-top: 1em;
   margin-right: 2em;
+  margin-bot: 1em;
 }
 /* Sticky sidebar
  *
