--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -174,6 +174,9 @@ a.sidebar-nav-icon {
 }
 
 @media (min-width: 64em) {
+  .sidebar{
+    margin-bot: 1rem;
+  }
   .content {
     margin-left: 22rem;
     margin-right: 4rem;
