--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -94,7 +94,7 @@ html {
     position: fixed;
     top: 0;
     left: 0;
-    bottom: 0;
+    bottom: 1rem;
     width: 18rem;
     text-align: left;
   }
@@ -134,9 +134,9 @@ a.sidebar-nav-icon {
   /* display: inline; */
   float: left;
   line-height: 1.75;
-  margin-top: 1em;
-  margin-right: 2em;
-  margin-bot: 1em;
+  margin-top: 1rem;
+  margin-right: 2rem;
+  margin-bot: 1rem;
 }
 /* Sticky sidebar
  *
